tests/NormalTests/paczka1/small_fuzzy/42417390.err
Error in line 7: OvlOsH9h S719 72,0
Error in line 10: OvlOsH9h S347 55,3
Error in line 12: OvlOsH9h A405 12,7
Error in line 4: S89 S347 0,9
